--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -1068,6 +1068,8 @@ talks:
     or our volunteers to pass the security check point.
 
     Take elevator to level 6, our registration desk staff will assist you with the process.
+  bio: >
+    Registration desk is on Level 6 near the lifts. It's completely staffed by volunteers. Please be patient with us!
   day: sat
   track:
   time: "08:00"
@@ -1083,6 +1085,8 @@ talks:
     or our volunteers to pass the security check point.
 
     Take elevator to level 6, our registration desk staff will assist you with the process.
+  bio: >
+    Registration desk is on Level 6 near the lifts. It's completely staffed by volunteers. Please be patient with us!
   twitter: pyconthailand
   day: sun
   track:
