--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -941,25 +941,143 @@ talks:
   time: "16:35"
   dur: "01:00"
 
-- bio: |-
+- speaker: "#1: Prawns+Pork #2: Pork+Eggplant #3: Chicken+Veges #4: Chicken+Prawns #5: Pork+Chicken"
+  title: Lunch @ Level 6 or 7
+  description: |-
+    Lunchboxes will be served on Level 6 and Level 7. There is free seating throughout the venue.
+
+    Note: If you had indicated a specific dietary requirement, your specially-prepared lunch box will be kept for you on the 6th floor.
+
+    To speed the queue please have your choice in mind
+
+    Set 1
+    -----
+
+    - Deep Fried Baby Corn Kaeng Som Goong 
+    - Sour curry with Prawns and mixed vegetables 
+    - Grilled Pork Salad with Apple Thai Relish with Vegetables 
+    - Butterfly Pea Rice 
+    - Thai Dessert
+
+    Set 2
+    -----
+
+    - Deep Fried Baby Corn 
+    - Grilled Pork Curry with Pineapple 
+    - Sweet Corn Salad with Salted Egg 
+    - Stir-fried Eggplants with Bean Paste and Basil 
+    - Butterfly Pea Rice 
+    - Thai Dessert
+
+    Set 3
+    -----
+
+    - Deep Fried Baby Corn 
+    - Chicken in Galangal - Turmeric Coconut Soup 
+    - Northeastern Style Spicy Pork Salad with Herbs 
+    - Stir-fried Vegetables 
+    - Butterfly Pea Rice 
+    - Thai Dessert
+
+    Set 4
+    -----
+
+    - Deep Fried Baby Corn 
+    - Green Curry With Chicken 
+    - Stir-fried Kale with Crispy Pork Belly 
+    - Spicy Paco Fern Salad with Shrimp 
+    - Butterfly Pea Rice 
+    - Thai Dessert
+
+    Set 5
+    -----
+
+    - Deep Fried Baby Corn 
+    - Red Curry with Pork 
+    - Grilled Aubergine Salad with Prawn 
+    - Stir-Fried Green Bean with Shrimp Paste and Minced Chicken 
+    - Butterfly Pea Rice 
+    - Thai Dessert
+
+    There will be two distribution points on the 7th floor, at the Green Space and the Forum areas.
+
+    There will be one distribution point on the 6th floor, next to the Auditorium.
+
+    If you had indicated a specific dietary requirement when you bought your ticket, your specially-prepared lunch box
+    will be kept for you on the 6th floor.
+  bio: |-
     Catered by Ginger Farm
-  description: >-
-    Lunchboxes will be served on Level 6 and Level 7
-  speaker: Lunchboxes will be served on Level 6 and Level 7
-  speakerimg:
-  title: Lunch
   day: sat
   track:
   time: "12:40"
   dur: "01:00"
 
-- bio: |-
+- speaker: "#1: Prawns+Pork #2: Pork+Eggplant #3: Chicken+Veges #4: Chicken+Prawns #5: Pork+Chicken"
+  title: Lunch @ Level 6 or 7
+  description: |-
+    Lunchboxes will be served on Level 6 and Level 7. There is free seating throughout the venue.
+
+    Note: If you had indicated a specific dietary requirement, your specially-prepared lunch box will be kept for you on the 6th floor.
+
+    To speed the queue please have your choice in mind
+
+    Set 1
+    -----
+
+    - Deep Fried Baby Corn Kaeng Som Goong
+    - Sour curry with Prawns and mixed vegetables
+    - Grilled Pork Salad with Apple Thai Relish with Vegetables
+    - Butterfly Pea Rice
+    - Thai Dessert
+
+    Set 2
+    -----
+
+    - Deep Fried Baby Corn
+    - Grilled Pork Curry with Pineapple
+    - Sweet Corn Salad with Salted Egg
+    - Stir-fried Eggplants with Bean Paste and Basil
+    - Butterfly Pea Rice
+    - Thai Dessert
+
+    Set 3
+    -----
+
+    - Deep Fried Baby Corn
+    - Chicken in Galangal - Turmeric Coconut Soup
+    - Northeastern Style Spicy Pork Salad with Herbs
+    - Stir-fried Vegetables
+    - Butterfly Pea Rice
+    - Thai Dessert
+
+    Set 4
+    -----
+
+    - Deep Fried Baby Corn
+    - Green Curry With Chicken
+    - Stir-fried Kale with Crispy Pork Belly
+    - Spicy Paco Fern Salad with Shrimp
+    - Butterfly Pea Rice
+    - Thai Dessert
+
+    Set 5
+    -----
+
+    - Deep Fried Baby Corn
+    - Red Curry with Pork
+    - Grilled Aubergine Salad with Prawn
+    - Stir-Fried Green Bean with Shrimp Paste and Minced Chicken
+    - Butterfly Pea Rice
+    - Thai Dessert
+
+    There will be two distribution points on the 7th floor, at the Green Space and the Forum areas.
+
+    There will be one distribution point on the 6th floor, next to the Auditorium.
+
+    If you had indicated a specific dietary requirement when you bought your ticket, your specially-prepared lunch box
+    will be kept for you on the 6th floor.
+  bio: |-
     Catered by Ginger Farm
-  description: >-
-    Lunchboxes will be served on Level 6 and Level 7
-  speaker: Lunchboxes will be served on Level 6 and Level 7
-  speakerimg:
-  title: Lunch
   day: sun
   track:
   time: "12:15"
