--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -26,27 +26,27 @@ talks:
   time: "09:50"
   dur: "00:40"
 
-- bio: |-
-    **Alex Khaerov** is a development lead at `Chainstack <https://chainstack.com>`_, with 9+ years in web services
-    development across diverse domains. His main passion is building robust, high-load and distributed service platforms
-    on top of a multi-cloud environment, utilizing all the power of Python and cloud native services. An organizer of
-    `Moscow Python Conf <https://conf.python.ru>`_ and avid activist of
-    `Singapore Python User Group <http://pugs.org.sg/>`_, cloud native enthusiast and member of Kubernetes SG
-    community. In his spare time, he speaks publicly at tech conferences and secretly codes in Python. Huge fan of
-    laptop stickers.
-
-  description: >-
-    You definitely have unit tests. Your code coverage above 80 or 90? Are u still
-    struggling with bugs and wanna increase the quality? What if I say that quarter
-    of your units are non-viable mutants? Yes, it is true and sounds rude. Let's mutate
-    your tests and look what it gets you.
-  speaker: Alex Khaerov
-  speakerimg: https://secure.gravatar.com/avatar/320f3b558c773592bba16c976d1b28d1?s=500
-  title: Kill the mutants, protect your code!
-  day: sat
-  track: 2
-  time: "16:10"
-  dur: "00:40"
+#- bio: |-
+#    **Alex Khaerov** is a development lead at `Chainstack <https://chainstack.com>`_, with 9+ years in web services
+#    development across diverse domains. His main passion is building robust, high-load and distributed service platforms
+#    on top of a multi-cloud environment, utilizing all the power of Python and cloud native services. An organizer of
+#    `Moscow Python Conf <https://conf.python.ru>`_ and avid activist of
+#    `Singapore Python User Group <http://pugs.org.sg/>`_, cloud native enthusiast and member of Kubernetes SG
+#    community. In his spare time, he speaks publicly at tech conferences and secretly codes in Python. Huge fan of
+#    laptop stickers.
+#
+#  description: >-
+#    You definitely have unit tests. Your code coverage above 80 or 90? Are u still
+#    struggling with bugs and wanna increase the quality? What if I say that quarter
+#    of your units are non-viable mutants? Yes, it is true and sounds rude. Let's mutate
+#    your tests and look what it gets you.
+#  speaker: Alex Khaerov
+#  speakerimg: https://secure.gravatar.com/avatar/320f3b558c773592bba16c976d1b28d1?s=500
+#  title: Kill the mutants, protect your code!
+#  day: sat
+#  track: 2
+#  time: "16:10"
+#  dur: "00:40"
 
 - bio: |-
     Studied Math, building systems, loves traveling and puns.
@@ -474,20 +474,20 @@ talks:
   time: "15:45"
   dur: "00:40"
 
-- bio: |-
-    I’m a Full Stack Developer, Developer Evangelist, Auth0 Ambassador, GDG Ranchi Organizer, and Mozilla Representative. I love speaking on Serverless, Authentication & Authorization, Google Technologies, Security, Web Extensions and Virtual Reality at different meet-ups and conferences.
-  description: >-
-    APIs are changing and languages like Python are shifting the paradigm of API consumption.
-    We often dedicate a lot of time in crafting powerful APIs but overlook proper
-    security measures. In this talk, we'll look at the proper way to secure our Python
-    API's with JSON Web Tokens with Moden Identity.
-  speaker: Md Shahbaz Alam
-  speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/19104/mdsbzalam.jpg
-  title: Securing your Python APIs with Auth0
-  day: sun
-  track: 3
-  time: "10:40"
-  dur: "00:40"
+#- bio: |-
+#    I’m a Full Stack Developer, Developer Evangelist, Auth0 Ambassador, GDG Ranchi Organizer, and Mozilla Representative. I love speaking on Serverless, Authentication & Authorization, Google Technologies, Security, Web Extensions and Virtual Reality at different meet-ups and conferences.
+#  description: >-
+#    APIs are changing and languages like Python are shifting the paradigm of API consumption.
+#    We often dedicate a lot of time in crafting powerful APIs but overlook proper
+#    security measures. In this talk, we'll look at the proper way to secure our Python
+#    API's with JSON Web Tokens with Moden Identity.
+#  speaker: Md Shahbaz Alam
+#  speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/19104/mdsbzalam.jpg
+#  title: Securing your Python APIs with Auth0
+#  day: sun
+#  track: 3
+#  time: "10:40"
+#  dur: "00:40"
 
 - bio: |-
     CEO of Zymple
